<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/white"
        tools:context=".LoginActivity">
    <ImageView android:layout_width="198dp"
               android:layout_height="232dp"
               android:src="@drawable/logocasa"

    />



        <EditText android:layout_width="300sp"
                  android:layout_height="wrap_content"
                  android:id="@+id/et_email"
                  android:hint="@string/Emailderegistro"
                  android:inputType="textEmailAddress"
                  android:layout_margin="2dp"
                  />
        <EditText android:layout_width="300sp"
                  android:layout_height="wrap_content"
                  android:id="@+id/et_cont"
                  android:hint="@string/Contraseña"
               />
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_ingresar"
                android:text="@string/Ingresar"
                android:background="@color/steelblue"
                android:layout_margin="20dp"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_registro"
            android:text="@string/Registrarme"
            android:textColor="@color/dodgerblue"
            android:background="@color/white"
            android:textAllCaps="false"/>




</LinearLayout>